--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ELITE LUXURY — About Us</title>
+<title>FASHION AND DESIGN — About Us</title>
 
 <style>
     body { margin:0; background:#000; color:#fff; font-family:Arial; }
@@ -23,7 +23,7 @@
     <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="clothes.html">CLOTHES</a></li>
-        <li><a href="shoes.html">SHOES</a></li>
+        <li><a href="shoes.html">FASHION SHOES</a></li>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
