--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3 id="trust">Trusted & gentle</h3>
         <p class="small">All products locally sourced, third-party tested for purity, and packaged with clear dosing guides. Always consult your healthcare provider before starting a new herbal product.</p>
         <dl class="small" style="margin-top:12px">
-          <dt><strong>Phone</strong></dt><dd>+254 700 000 000</dd>
+          <dt><strong>Phone</strong></dt><dd>+254 768801692 </dd>
           <dt><strong>Open</strong></dt><dd>Mon–Fri, 9:00–17:00</dd>
         </dl>
       </aside>
