--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <script>
     // basic app data (sample). Replace with real product data when ready.
     const products = [
-      {id:1,title:'Calm Tea — 30 sachets',price:350,desc:'Gentle chamomile & lavender blend to support restful sleep.',img:'https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&w=800&q=60'},
+      {id:1,title:'Calm Tea — 30 sachets',price:350,desc:'Gentle chamomile & lavender blend to support restful sleep.',img:'HerbalMedicine-share.jpg'},
       {id:2,title:'Joint Ease Balm',price:450,desc:'Topical balm with arnica and ginger for mild joint discomfort.',img:'https://images.unsplash.com/photo-1524594154902-9d86a3f3c494?auto=format&fit=crop&w=800&q=60'},
       {id:3,title:'Digestive Bitters — 60ml',price:300,desc:'Herbal bitters to support digestion and appetite.',img:'https://images.unsplash.com/photo-1506801310323-534be5e7bb85?auto=format&fit=crop&w=800&q=60'}
     ];
