--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <li>Evidence-based herbal usage notes</li>
         </ul>
         <p style="margin-top:12px"><a class="btn" href="#products">Shop remedies</a></p>
+        <img src="HerbalMedicine_share.jpg" width="100" height="100">
       </div>
 
       <aside class="card" aria-labelledby="trust">
@@ -81,6 +82,7 @@
           <dt><strong>Phone</strong></dt><dd>+254 768801692 </dd>
           <dt><strong>Open</strong></dt><dd>Mon–Fri, 9:00–17:00</dd>
         </dl>
+        <img src="HerbalMedicine_share.jpg" width="100" height="100">
       </aside>
     </section>
 
