--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>Evidence-based herbal usage notes</li>
         </ul>
         <p style="margin-top:12px"><a class="btn" href="#products">Shop remedies</a></p>
-        <img src="HerbalMedicine_share.jpg" width="100" height="100">
+        <img src="Herbal-medicine-Leaves-bottles-and-pills.jpg" width="100" height="100">
       </div>
 
       <aside class="card" aria-labelledby="trust">
