--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <dt><strong>Phone</strong></dt><dd>+254 768801692 </dd>
           <dt><strong>Open</strong></dt><dd>Mon–Fri, 9:00–17:00</dd>
         </dl>
-        <img src="HerbalMedicine_share.jpg" width="100" height="100">
+        <img src="Top-10-Benefits-of-Using-Herbal-Medicines.jpg" width="100" height="100">
       </aside>
     </section>
 
