--- a/index.html
+++ b/index.html
@@ -1,6 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clothes & Shoes Store</title>
+  <style>
+    * { box-sizing: border-box; font-family: Arial, sans-serif; }
+    body { margin: 0; background: #f5f5f5; }
+
+    header {
+      background: #111; color: #fff; padding: 15px 20px;
+      display: flex; align-items: center; justify-content: space-between;
+    }
+    header h1 { margin: 0; }
+    header input { padding: 8px; width: 250px; border-radius: 5px; border: none; }
+    header button { padding: 8px 12px; border: none; cursor: pointer; }
+
+    nav {
+      background: #222; padding: 10px; text-align: center;
+    }
+    nav button {
+      background: #444; color: #fff; border: none; padding: 8px 15px;
+      margin: 5px; border-radius: 5px; cursor: pointer;
+    }
+    nav button:hover { background: #000; }
+
+    .container { padding: 20px; }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .product {
+      background: #fff; border-radius: 10px; padding: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+    .product:hover { transform: scale(1.03); }
+
+    .product img {
+      width: 100%; height: 200px; object-fit: cover; border-radius: 8px;
+    }
+
+    .product h3 { margin: 10px 0 5px; }
+    .price { color: #e63946; font-weight: bold; }
+
+    .product button {
+      width: 100%; margin-top: 10px; padding: 10px;
+      background: #111; color: #fff; border: none; border-radius: 5px;
+      cursor: pointer;
+    }
+    .product button:hover { background: #000; }
+
+    /* Cart */
+    .cart {
+      position: fixed; top: 0; right: 0; width: 320px; height: 100%;
+      background: #fff; padding: 15px;
+      box-shadow: -4px 0 10px rgba(0,0,0,0.2);
+      display: none; overflow-y: auto;
+    }
+    .cart h2 { margin-top: 0; }
+    .cart-item {
+      display: flex; justify-content: space-between; margin-bottom: 10px;
+    }
+    .cart-item button {
+      background: red; color: #fff; border: none; padding: 3px 6px;
+      border-radius: 4px; cursor: pointer;
+    }
+
+    footer {
+      background: #111; color: #fff; text-align: center;
+      padding: 15px; margin-top: 30px;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Fashion Store</h1>
+  <input type="text" id="search" placeholder="Search clothes or shoes...">
+  <button onclick="toggleCart()">🛒 Cart (<span id="cartCount">0</span>)</button>
+</header>
+
+<nav>
+  <button onclick="filterCategory('all')">All</button>
+  <button onclick="filterCategory('clothes')">Clothes</button>
+  <button onclick="filterCategory('shoes')">Shoes</button>
+</nav>
+
+<div class="container">
+  <div class="products" id="productList"></div>
+</div>
+
+<div class="cart" id="cart">
+  <h2>Your Cart</h2>
+  <div id="cartItems"></div>
+  <h3>Total: KSh <span id="total">0</span></h3>
+</div>
+
+<footer>
+  <p>© 2025 Fashion Store | Clothes & Shoes</p>
+</footer>
+
+<script>
+  const products = [
+    { id: 1, name: 'Men T‑Shirt', category: 'clothes', price: 1200, image: 'https://via.placeholder.com/300x300' },
+    { id: 2, name: 'Women Dress', category: 'clothes', price: 2500, image: 'https://via.placeholder.com/300x300' },
+    { id: 3, name: 'Jeans', category: 'clothes', price: 1800, image: 'https://via.placeholder.com/300x300' },
+    { id: 4, name: 'Sneakers', category: 'shoes', price: 3500, image: 'https://via.placeholder.com/300x300' },
+    { id: 5, name: 'Leather Shoes', category: 'shoes', price: 4200, image: 'https://via.placeholder.com/300x300' },
+    { id: 6, name: 'High Heels', category: 'shoes', price: 3800, image: 'https://via.placeholder.com/300x300' }
+  ];
+
+  let cart = [];
+
+  function displayProducts(list) {
+    const productList = document.getElementById('productList');
+    productList.innerHTML = '';
+    list.forEach(p => {
+      productList.innerHTML += `
+        <div class="product">
+          <img src="${p.image}" alt="${p.name}">
+          <h3>${p.name}</h3>
+          <p class="price">KSh ${p.price}</p>
+          <button onclick="addToCart(${p.id})">Add to Cart</button>
+        </div>`;
+    });
+  }
+
+  function addToCart(id) {
+    const product = products.find(p => p.id === id);
+    cart.push(product);
+    updateCart();
+  }
+
+  function removeFromCart(index) {
+    cart.splice(index, 1);
+    updateCart();
+  }
+
+  function updateCart() {
+    const cartItems = document.getElementById('cartItems');
+    cartItems.innerHTML = '';
+    let total = 0;
+    cart.forEach((item, index) => {
+      total += item.price;
+      cartItems.innerHTML += `
+        <div class="cart-item">
+          <span>${item.name}</span>
+          <span>KSh ${item.price} <button onclick="removeFromCart(${index})">x</button></span>
+        </div>`;
+    });
+    document.getElementById('total').innerText = total;
+    document.getElementById('cartCount').innerText = cart.length;
+  }
+
+  function toggleCart() {
+    document.getElementById('cart').style.display =
+      document.getElementById('cart').style.display === 'block' ? 'none' : 'block';
+  }
+
+  function filterCategory(category) {
+    if (category === 'all') displayProducts(products);
+    else displayProducts(products.filter(p => p.category === category));
+  }
+
+  document.getElementById('search').addEventListener('input', e => {
+    const value = e.target.value.toLowerCase();
+    displayProducts(products.filter(p => p.name.toLowerCase().includes(value)));
+  });
+
+  displayProducts(products);
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interactive E‑commerce Website</title>
