--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <script>
   const products = [
-    { id: 1, name: 'Men T‑Shirt', category: 'clothes', price: 1200, <img src="8688185377_2107390325.jpg"/300x300'> },
+    { id: 1, name: 'Men T‑Shirt', category: 'clothes', price: 1200, <img src="8688185377_2107390325.jpg" > },
     { id: 2, name: 'Women Dress', category: 'clothes', price: 2500, image: 'https://via.placeholder.com/300x300' },
     { id: 3, name: 'Jeans', category: 'clothes', price: 1800, image: 'https://via.placeholder.com/300x300' },
     { id: 4, name: 'Sneakers', category: 'shoes', price: 3500, image: 'https://via.placeholder.com/300x300' },
