--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </nav>
 
 <div class="container">
-  <img src="8688185377_2107390325.jpg" alt="Description of image">
+  <img src="8688185377_2107390325.jpg" height="100" width="100" alt="Description of image">
   <div class="products" id="productList"></div>
 </div>
 
