--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <h2 id="clothes">Clothes</h2>
   <div class="products">
     <div class="product">
-      <img src="https://via.placeholder.com/300x300" alt="T-Shirt">
+      <img src="8688185377_2107390325.jpg" alt="Description of image" width="300" height="200">
       <h3>Men T‑Shirt</h3>
       <p class="price">KSh 1200</p>
       <label>Add to Cart</label>
