--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300x300" alt="Dress">
+      <img src="GUEST_4b3c2d25-d66b-4c97-9410-a3f2f338098e.jpg" alt="Description of image" width="300" height="200">
       <h3>Women Dress</h3>
       <p class="price">KSh 2500</p>
       <label>Add to Cart</label>
