--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <h2 id="shoes">Shoes</h2>
   <div class="products">
     <div class="product">
-      <img src="CXX102-08X-3C-MBL.jpg" alt="Description of image" width="300" height="200">
+      <img src="pexels-rafael-quaty-13236693.jpg" alt="Description of image" width="300" height="200">
       <h3>Sneakers</h3>
       <p class="price">KSh 3500</p>
       <label>Add to Cart</label>
