--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="product">
-      <img src="purepng.com-women-dressfashion-women-dress-cloth-apparelclothingwomen-dress-631522326940onrfa.jpg" alt="Description of image" width="300" height="200">
+      <img src="OIP (1).jpg" alt="Description of image" width="300" height="200">
       <h3>Women Dress</h3>
       <p class="price">KSh 2500</p>
       <label>Add to Cart</label>
