--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="product">
-      <img src="63e41d9b-0742-4dc9-852e-b08a058833a7.17b36576fe2df633ebf569883200367e.jpg" alt="Description of image" width="300" height="200">
+      <img src="OIP (2).jpg" alt="Description of image" width="300" height="200">
       <h3>High Heels</h3>
       <p class="price">KSh 3800</p>
       <label>Add to Cart</label>
