--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="product">
-      <img src="OIP (2).jpg" alt="Description of image" width="300" height="200">
+      <img src="OIP.jpg" alt="Description of image" width="300" height="200">
       <h3>High Heels</h3>
       <p class="price">KSh 3800</p>
       <label>Add to Cart</label>
